# Damas

./: CMakeLists.txt  README.md  README_ETSIDI.h
headers/: Ficha.h  Motor.h  Mundo.h  Vector2D.h
src/: Coordinador.cpp  Coordinador.h  Damas.cpp  Ficha.cpp  Maquina.cpp  Maquina.h  Motor.cpp  Mundo.cpp  Tablero.cpp  Tablero.h  Tabuleiro.cpp  Tabuleiro.h
